--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ and sound design needs!<br>
 Here is a glimpse of our work.
     </article>
     <div class="feature fade-element">
-        <video src="video/QF Test 7.mp4" autoplay muted loop allowfullscreen></video>
+        <video src="video/QF Test 7.mov" autoplay muted loop allowfullscreen></video>
         <sup><a href="#" id="fullScreenButton">[Click for full screen]</a></sup>
         <figcaption id="featurefig">Showreel</figcaption>
         <ol>
@@ -68,7 +68,7 @@ Here is a glimpse of our work.
     </div>
 
     <div class="gallery-container">
-    <video class="fade-element" src="video/QF Test 2.mp4" autoplay muted loop></video>
+    <video class="fade-element" src="video/QF Test 2_1.mp4" autoplay muted loop></video>
     <figcaption>The Looming Film</figcaption>
     </div>
 </div>
